# SampleOrderSystem-hyeonjinjang-20044886

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.py  main.py  pyproject.toml
.claude/agents/: ai-action.md  compliance-verify.md  doc-consistency-verify.md  test-verify.md
.claude/skills/mvc-skeleton/: SKILL.md
.claude/skills/tdd-skill/: SKILL.md
app/controllers/: monitoring_controller.py  order_controller.py  production_line_controller.py  sample_controller.py
app/models/: order.py  order_repository.py  sample.py  sample_repository.py
app/views/: monitoring_view.py  order_view.py  production_view.py  sample_view.py
docs/: PLAN.md  PRD.md
tests/: test_config.py  test_main.py  test_monitoring_controller.py  test_monitoring_view.py  test_order_controller.py  test_order_model.py  test_order_repository.py  test_order_view.py  test_production_line_controller.py  test_production_view.py  test_sample_controller.py  test_sample_model.py  test_sample_repository.py  test_sample_view.py
