[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-order-system"
version = "0.1.0"
description = "반도체 시료 생산주문관리 시스템"
requires-python = ">=3.10"
dependencies = [
    "data-persistence",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["app*"]
